minimal lock implementation